# bug_robot

bug_robot_description/: CMakeLists.txt  package.xml
resources/: inertia_calculator.py
